--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,7 @@ h2 {
 p {
     margin-top: 2.5rem;
     margin-bottom: 1.5rem;
+    line-height: 1.5rem;
 }
 
 .background_white {
@@ -270,12 +271,14 @@ footer {
 /* #endregion Footer */
 
 /* #region waves */
-svg{
-    margin: -10px;
+.wave-white{
+    margin-bottom: -4px;
 }
 .wave-grey{
-    background-color: #F6F6F6;
+    margin-top: -4px;
+    rotate: 180deg;
 }
+
 
 
 /* #endregion waves */
